Fiche Stat Player

--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -24,6 +24,8 @@
                 <div class="row"></div>
                 <form novalidate class="col s12" name="playerCivilSection">
                     
+                    <div class="row center" ng-if="addPlayerTitle==false"><avatar person="player" width="'150px'"></avatar></div>
+                    
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m3 s6">
